--- a/.github/workflows/build-arm64.yml
+++ b/.github/workflows/build-arm64.yml
@@ -1,4 +1,4 @@
-name: Build LuaJ ARM64 FastIO (System.load compatible)
+name: Build JNI ARM64 FastIO (Direct JNI for LuaJ)
 
 on:
   workflow_dispatch:
@@ -6,7 +6,7 @@ on:
     branches: [ main, master ]
 
 jobs:
-  build-luaj-arm64:
+  build-jni-arm64:
     runs-on: ubuntu-latest
     
     steps:
@@ -20,43 +20,46 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
     
-    - name: Create LuaJ Build Dockerfile
+    - name: Create JNI Build Dockerfile
       run: |
-        cat > Dockerfile.luaj << 'EOF'
+        cat > Dockerfile.jni << 'EOF'
         FROM arm64v8/alpine:3.18
         
-        RUN apk add --no-cache build-base musl-dev file
+        RUN apk add --no-cache build-base musl-dev file openjdk11-jdk
         
         WORKDIR /build
-        COPY fastio_luaj.c .
+        COPY fastio_jni.c .
         
-        # Build for LuaJ/System.load compatibility
-        RUN gcc -O3 -fPIC -Wall -Wextra -std=c99 \
+        # Get JNI headers
+        RUN find /usr/lib/jvm -name "jni.h" -exec dirname {} \; | head -1 > jni_path.txt
+        RUN JNI_PATH=$(cat jni_path.txt) && \
+            echo "Found JNI headers at: $JNI_PATH" && \
+            gcc -O3 -fPIC -Wall -Wextra -std=c99 \
             -march=armv8-a -mtune=cortex-a72 \
             -DNDEBUG -fstack-protector \
-            -c fastio_luaj.c -o fastio.o
+            -I"$JNI_PATH" -I"$JNI_PATH/linux" \
+            -c fastio_jni.c -o fastio.o
         
-        # Create shared library with proper exports
+        # Create JNI shared library
         RUN gcc -shared -fPIC \
             -Wl,-soname,fastio.so \
-            -Wl,--export-dynamic \
             -o fastio.so fastio.o
         
-        # Verify build and check exports
-        RUN echo "=== LuaJ ARM64 FastIO ===" && \
+        # Verify JNI build
+        RUN echo "=== JNI ARM64 FastIO ===" && \
             file fastio.so && \
             ls -la fastio.so && \
-            echo "=== Function Exports ===" && \
-            nm -D fastio.so | grep -E "(fastio|luaopen)" || echo "Checking for symbols..."
+            echo "=== JNI Symbols ===" && \
+            nm -D fastio.so | grep Java || echo "JNI symbols may be present"
         
         CMD ["tail", "-f", "/dev/null"]
         EOF
     
-    - name: Build LuaJ ARM64 FastIO
+    - name: Build JNI ARM64 FastIO
       run: |
         docker buildx build --platform linux/arm64 \
-          -f Dockerfile.luaj \
-          -t fastio-luaj-arm64:latest \
+          -f Dockerfile.jni \
+          -t fastio-jni-arm64:latest \
           --load \
           .
         
@@ -64,16 +67,16 @@ jobs:
         
         docker run --rm --platform linux/arm64 \
           -v $PWD/output:/output \
-          fastio-luaj-arm64:latest \
+          fastio-jni-arm64:latest \
           cp /build/fastio.so /output/
         
-        echo "=== LuaJ Build Results ==="
+        echo "=== JNI Build Results ==="
         ls -la output/
         file output/fastio.so
     
-    - name: Upload LuaJ ARM64 binary
+    - name: Upload JNI ARM64 binary
       uses: actions/upload-artifact@v4
       with:
-        name: fastio-luaj-arm64
+        name: fastio-jni-arm64
         path: output/fastio.so
         retention-days: 90
